message snippet style overflow fixed

--- a/ldengine.css
+++ b/ldengine.css
@@ -24,6 +24,7 @@
 	color: #666;
 	cursor: pointer;
 	border-bottom: 1px solid #D8D8D8;
+	overflow: hidden;
 }
 
 .active-snippet {
